src/main/java/com/example/harumeonglog/global/error/code/PetErrorCode.java
package com.example.harumeonglog.global.error.code;

import lombok.AllArgsConstructor;
import lombok.Getter;
import org.springframework.http.HttpStatus;

@Getter
@AllArgsConstructor
public enum PetErrorCode implements BaseErrorCode{
    IMAGE_NOT_FOUND(HttpStatus.NOT_FOUND, "PETIMAGE404", "반려견 이미지를 찾지 못했습니다."),
    ;

    private final HttpStatus httpStatus;
    private final String code;
    private final String message;
}
